--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,10 @@ mybatis-plus.mapper-locations=classpath:mapper/*.xml
 spring.mvc.view.prefix=/pages/
 spring.mvc.view.suffix=.html
 
+##\u90AE\u7BB1\u914D\u7F6E
+spring.mail.port=465
+spring.mail.host=smtp.exmail.qq.com
+spring.mail.username=system1@huochetou123.com
+spring.mail.password=ABC123abc
+spring.mail.default-encoding=UTF-8
+
