--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,13 @@
 			<artifactId>jjwt</artifactId>
 			<version>${jjwt.version}</version>
 		</dependency>
+		
+		<!-- quartz 定时器 -->
+		<!-- <dependency>
+		  <groupId>org.quartz-scheduler</groupId>
+		  <artifactId>quartz</artifactId>
+		  <version>2.2.1</version>
+		</dependency> -->
 
 		<!-- 通用mybatis-plus begin -->
 		<dependency>
